Code check in By Sagar  for UAT issue fixing

--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -189,7 +189,7 @@ validator.uob.plantoinvestamt.requiredMsg=Enter a number (years) for how long yo
 validator.uob.investamt.requiredMsg=Investment amount is required.
 validator.uob.goal.required=Please choose your investment goal.
 validator.uob.wages.required=Salary/Wages are required.
-validator.uob.liquid.asset.required=Liquid asset are required.
+validator.uob.liquid.asset.required=Liquid asset is required.
 validator.uob.other.investments.required=Other investments are required.
 validator.uob.other.investmentsProp.required=Investment properties are required.
 validator.uob.total.expenses.required=Total expenses are required.
