Abhang 08/09/2017 CRM code committing

--- a/Invessence/modules/aggregator/pom.xml
+++ b/Invessence/modules/aggregator/pom.xml
@@ -221,7 +221,7 @@
 					</archive>
 
 					<!--<finalName>broker-services/broker-services</finalName>-->
-					<finalName>aggregator/${artifactId}-${version}</finalName>
+					<!--<finalName>aggregator/${artifactId}-${version}</finalName>-->
 				</configuration>
 			</plugin>
 		</plugins>
