--- a/Invessence/modules/parent/pom.xml
+++ b/Invessence/modules/parent/pom.xml
@@ -20,10 +20,10 @@
    </properties>
 
    <distributionManagement>
-<snapshotRepository>
+      <repository>
    <id>Nexus</id>
    <url>http://192.168.100.122:8081/nexus/content/repositories/Nexus/</url>
-</snapshotRepository>
+      </repository>
       </distributionManagement>
 
      <repositories>
