--- a/Invessence/modules/web/pom.xml
+++ b/Invessence/modules/web/pom.xml
@@ -339,7 +339,12 @@
                      <artifactId>bctsp-jdk14</artifactId>
                  </exclusion>
              </exclusions>
-         </dependency><dependency><groupId>com.invessence</groupId><artifactId>file-processor</artifactId><version>1.0-SNAPSHOT</version></dependency>
+         </dependency>
+      <dependency>
+         <groupId>com.invessence</groupId>
+         <artifactId>file-processor</artifactId>
+         <version>1.0-SNAPSHOT</version>
+      </dependency>
 
       <!-- https://mvnrepository.com/artifact/net.sourceforge.fiftyone-java/51Degrees.mobi.detection.core -->
       <!--<dependency>-->
