--- a/Invessence/modules/web/src/main/resources/log4j.properties
+++ b/Invessence/modules/web/src/main/resources/log4j.properties
@@ -1,13 +1,13 @@
 # For JBoss: Avoid to setup Log4J outside $JBOSS_HOME/server/default/deploy/log4j.xml!
 # For all other servers: Comment out the Log4J listener in web.xml to activate Log4J.
-log4j.rootLogger=info, logfile, bwslogfile
+log4j.rootLogger=debug, logfile, bwslogfile
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
 
 log4j.appender.logfile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.logfile.File=${catalina.base}/logs/web.log
+log4j.appender.logfile.File=D:/Project/Abhang/logs/uob.log
 log4j.appender.logfile.Append = true
   #${catalina.home}/logs/tcm.log
   #${catalina.base}/logs/tcm.log
