--- a/Invessence/modules/broker-webservices/pom.xml
+++ b/Invessence/modules/broker-webservices/pom.xml
@@ -218,7 +218,7 @@
 					</archive>
 
                    <!--<finalName>broker-services/broker-services</finalName>-->
-                   <finalName>broker-webservices/${artifactId}-${version}</finalName>
+                   <!--<finalName>broker-webservices/${artifactId}-${version}</finalName>-->
 				</configuration>
 			</plugin>
 		</plugins>
