Committed by Sagar for UOB UI changes

--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -186,6 +186,7 @@ validator.validdobother.formatMsg=*Birth date cannot be later than today's date.
 
 validator.uob.age.required=Age is required.
 validator.uob.plantoinvestamt.requiredMsg=Enter a number (years) for how long you plan to invest
+validator.uob.investamtCurr.requiredMsg=Investment currency is required.
 validator.uob.investamt.requiredMsg=Investment amount is required.
 validator.uob.goal.required=Please choose your investment goal.
 validator.uob.wages.required=Salary/Wages are required.
@@ -203,3 +204,4 @@ validator.uob.level.volatility.required=Level of volatility is required.
 validator.uob.long-term.investment.required=Long-term investment is required.
 validator.uob.fileProcessing.status.done=File processing done successfully
 validator.uob.fileProcessing.status.failed=File processing failed
+validator.uob.currConver.required=Error occurred while using selected investment currency.
