--- a/Invessence/modules/broker-webservices/pom.xml
+++ b/Invessence/modules/broker-webservices/pom.xml
@@ -137,6 +137,14 @@
 
 </dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
+		<dependency>
+    <groupId>com.itextpdf</groupId>
+    <artifactId>itextpdf</artifactId>
+    <version>5.5.12</version>
+</dependency>
+
+
     </dependencies>
 
 	 <build>
