Committed by Sagar for UOB account opening changes

--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -205,3 +205,25 @@ validator.uob.long-term.investment.required=Long-term investment is required.
 validator.uob.fileProcessing.status.done=File processing done successfully
 validator.uob.fileProcessing.status.failed=File processing failed
 validator.uob.currConver.required=Error occurred while using selected investment currency.
+
+validator.uob.new.pri.acctHldr.title=Title is required.
+validator.uob.new.pri.acctHldr.fullName=Full name is required.
+validator.uob.new.pri.acctHldr.gender=Gender is required.
+validator.uob.new.pri.acctHldr.dob=Date of birth is required.
+validator.uob.new.pri.acctHldr.ctryOfBrth=Country of birth is required.
+validator.uob.new.pri.acctHldr.natioanlity=Nationality is required.
+validator.uob.new.pri.acctHldr.nric=NRIC number is required.
+validator.uob.new.pri.acctHldr.otrNatCtry=Other nationality country is required.
+validator.uob.new.pri.acctHldr.malayIcNum=Malaysia IC number is required.
+validator.uob.new.pri.acctHldr.psprtNum=Passport number is required.
+validator.uob.new.pri.acctHldr.ctryCdHmNum=Country code for home tel number is required.
+validator.uob.new.pri.acctHldr.hmNum=Home tel number is required.
+validator.uob.new.pri.acctHldr.ctryCdMblNum=Country code for mobile number is required.
+validator.uob.new.pri.acctHldr.mblNum=Mobile number is required.
+validator.uob.new.pri.acctHldr.ctryCdOffNum=Country code for office tel number is required.
+validator.uob.new.pri.acctHldr.offNum=Office tel number is required.
+validator.uob.new.pri.acctHldr.ctryCdFaxNum=Country code for fax number is required.
+validator.uob.new.pri.acctHldr.faxNum=Fax number is required.
+validator.uob.new.pri.acctHldr.emlAddrs=Valid email address is required.
+validator.uob.new.email.requiredMsg=Email address is required
+validator.uob.acctType.exist=Please select Existing securities trading account on UOBKH Yes/No.
