Committed by Sagar for UOB account opening

--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -227,3 +227,30 @@ validator.uob.new.pri.acctHldr.faxNum=Fax number is required.
 validator.uob.new.pri.acctHldr.emlAddrs=Valid email address is required.
 validator.uob.new.email.requiredMsg=Email address is required
 validator.uob.acctType.exist=Please select Existing securities trading account on UOBKH Yes/No.
+validator.uob.new.pri.acctHldr.momNm=Mother's Maiden Name is required.
+validator.uob.new.pri.acctHldr.dadNm=Father's Name is required.
+validator.uob.new.pri.acctHldr.sclNm=Name of Primary School Attend is required.
+validator.uob.new.pri.acctHldr.anlInc=Anual income is required.
+validator.uob.new.pri.acctHldr.netWrth=NetWorth is required.
+validator.uob.new.pri.acctHldr.src=Source of Funds / Wealth is required.
+validator.uob.new.pri.acctHldr.srcOtrs=Please specify Source of Funds/Weath.
+validator.uob.new.pri.acctHldr.relChc=Related to any employee / trading details are required.
+validator.uob.new.pri.acctHldr.relNm1=Name related to any employee / trading details is required.
+validator.uob.new.pri.acctHldr.relNum1=Account Number related to any employee / trading details is required.
+validator.uob.new.pri.acctHldr.relNm2=Name related to any employee / trading details is required.
+validator.uob.new.pri.acctHldr.relNum2=Account Number related to any employee / trading details is required.
+validator.uob.new.pri.acctHldr.inflAct=Details of trading account(s) in UOB Kay Hian in which you have control or influence is required.
+validator.uob.new.pri.acctHldr.inflNm1=Name related to trading account(s) in UOB Kay Hian in which you have control or influence is required.
+validator.uob.new.pri.acctHldr.inflNum1=Account Number related to trading account(s) in UOB Kay Hian in which you have control or influence is required.
+validator.uob.new.pri.acctHldr.inflNm2=Name related to trading account(s) in UOB Kay Hian in which you have control or influence is required.
+validator.uob.new.pri.acctHldr.inflNum2=Account Number related to trading account(s) in UOB Kay Hian in which you have control or influence is required.
+validator.uob.new.pri.acctHldr.ctrlAct=Details related account holder in UOB Kay Hian, who has control or influence over this trading account is required.
+validator.uob.new.pri.acctHldr.ctrlNm1=Name of account holder in UOB Kay Hian, who has control or influence over this trading account is required.
+validator.uob.new.pri.acctHldr.ctrlNum1=Account Number related to account holder in UOB Kay Hian, who has control or influence over this trading account is required.
+validator.uob.new.pri.acctHldr.ctrlNm2=Name of account holder in UOB Kay Hian, who has control or influence over this trading account is required.
+validator.uob.new.pri.acctHldr.ctrlNum2=Account Number related to account holder in UOB Kay Hian, who has control or influence over this trading account is required.
+
+
+=related to any employee / trading representative of UOB Kay Hian
+=
+=account holder in UOB Kay Hian who has control or influence over this trading account
