Committed by Sagar for UOB account opening

--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -250,7 +250,32 @@ validator.uob.new.pri.acctHldr.ctrlNum1=Account Number related to account holder
 validator.uob.new.pri.acctHldr.ctrlNm2=Name of account holder in UOB Kay Hian, who has control or influence over this trading account is required.
 validator.uob.new.pri.acctHldr.ctrlNum2=Account Number related to account holder in UOB Kay Hian, who has control or influence over this trading account is required.
 
+validator.uob.new.pri.acctHldr.empStat=Employment status is required.
+validator.uob.new.pri.acctHldr.eduQual=Educational qualification is required.
+validator.uob.new.pri.acctHldr.eduQualOtr=Other qualification detail is required.
+validator.uob.new.pri.acctHldr.empOcc=Occupation is required.
+validator.uob.new.pri.acctHldr.empNm=Name of Employer is required.
+validator.uob.new.pri.acctHldr.empAddr=Employer address is required.
+validator.uob.new.pri.acctHldr.empPoCd=Postal code is required.
+validator.uob.new.pri.acctHldr.empCty=City/State is required.
+validator.uob.new.pri.acctHldr.empCtry=Country is required.
 
-=related to any employee / trading representative of UOB Kay Hian
-=
-=account holder in UOB Kay Hian who has control or influence over this trading account
+validator.uob.new.pri.acctHldr.phyAddr=Residential address is required.
+validator.uob.new.pri.acctHldr.phyPoCd=Residential postal code is required.
+validator.uob.new.pri.acctHldr.phyCty=Residential City / State is required.
+validator.uob.new.pri.acctHldr.phyCtry=Residential country is required.
+validator.uob.new.pri.acctHldr.malFlag=Mailing address same as Residential address is required.
+validator.uob.new.pri.acctHldr.malAddr=Mailing address is required.
+validator.uob.new.pri.acctHldr.malPoCd=Mailing postal code is required.
+validator.uob.new.pri.acctHldr.malCty=Mailing City / State is required.
+validator.uob.new.pri.acctHldr.malCtry=Mailing country is required.
+validator.uob.new.pri.acctHldr.preExp=Previous experience in investing in financial product(s) is required.
+validator.uob.new.pri.acctHldr.preExpSpf=Please specify previous experience in investing in financial product(s) is required.
+validator.uob.new.pri.acctHldr.instObj=Investment objective is required.
+validator.uob.new.pri.acctHldr.instObjDtl=Other investment objective detail is required.
+validator.uob.new.pri.acctHldr.namFinIst=Name of other financial institution is required.
+validator.uob.new.pri.acctHldr.debt=Debt detail is required.
+validator.uob.new.pri.acctHldr.debtDsc=Debt specification is required.
+validator.uob.new.pri.acctHldr.disp=Disputed account detail is required.
+validator.uob.new.pri.acctHldr.dispDsc=Disputed account specification is required.
+validator.uob.new.pri.acctHldr.txtMnPnl=Taxation detail is required.
