Committed by Sagar for UOB account opening

--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -213,6 +213,7 @@ validator.uob.new.pri.acctHldr.dob=Date of birth is required.
 validator.uob.new.pri.acctHldr.ctryOfBrth=Country of birth is required.
 validator.uob.new.pri.acctHldr.natioanlity=Nationality is required.
 validator.uob.new.pri.acctHldr.nric=NRIC number is required.
+validator.uob.new.pri.acctHldr.ctry=Country of nationality is required.
 validator.uob.new.pri.acctHldr.otrNatCtry=Other nationality country is required.
 validator.uob.new.pri.acctHldr.malayIcNum=Malaysia IC number is required.
 validator.uob.new.pri.acctHldr.psprtNum=Passport number is required.
@@ -236,9 +237,9 @@ validator.uob.new.pri.acctHldr.src=Source of Funds / Wealth is required.
 validator.uob.new.pri.acctHldr.srcOtrs=Please specify Source of Funds/Weath.
 validator.uob.new.pri.acctHldr.relChc=Related to any employee / trading details are required.
 validator.uob.new.pri.acctHldr.relNm1=Name related to any employee / trading details is required.
-validator.uob.new.pri.acctHldr.relNum1=Account Number related to any employee / trading details is required.
+validator.uob.new.pri.acctHldr.relNum1=Relationship to any employee / trading details is required.
 validator.uob.new.pri.acctHldr.relNm2=Name related to any employee / trading details is required.
-validator.uob.new.pri.acctHldr.relNum2=Account Number related to any employee / trading details is required.
+validator.uob.new.pri.acctHldr.relNum2=Relationship to any employee / trading details is required.
 validator.uob.new.pri.acctHldr.inflAct=Details of trading account(s) in UOB Kay Hian in which you have control or influence is required.
 validator.uob.new.pri.acctHldr.inflNm1=Name related to trading account(s) in UOB Kay Hian in which you have control or influence is required.
 validator.uob.new.pri.acctHldr.inflNum1=Account Number related to trading account(s) in UOB Kay Hian in which you have control or influence is required.
